[package]
authors = ["Akira1364"]
description = "A port of a combination of the C++ and D ports of my Free Pascal Binary Trees benchmark implementation, once again written just out of curiosity."
edition = "2018"
include = ["Cargo.toml", "LICENCE", "src/**/*"]
license = "MIT"
name = "binarytrees_benchmark"
readme = "README.md"
repository = "https://github.com/Akira13641/BinaryTreesBenchmarkRust.git"
version = "0.0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[dependencies]
rayon = "1.4.0"
